--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
@@ -56,11 +55,11 @@
     "preboot": "^5.0.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "to-string-loader": "^1.1.5",
-    "typescript": "2.5.3",
+    "typescript": "~2.5.0",
     "url-loader": "^0.5.7",
     "webpack": "^3.6.0",
     "webpack-hot-middleware": "^2.19.1",
@@ -68,7 +67,8 @@
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
+    "@angular/cli": "^1.7.0-beta.1",
+    "@angular/compiler-cli": "^5.2.1",
     "@ngtools/webpack": "^1.9.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
