--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     "build:dev": "npm run build:vendor && npm run build:webpack",
     "build:webpack": "webpack --progress --color",
     "build:prod": "npm run clean && npm run build:vendor -- --env.prod && npm run build:webpack -- --env.prod",
+    "build:p": "npm run build:webpack -- --env.prod",
     "build:vendor": "webpack --config webpack.config.vendor.js --progress --color",
     "clean": "rimraf wwwroot/dist clientapp/dist"
   },
   "dependencies": {
-    "@angular/animations": "^4.3.0",
-    "@angular/common": "^4.3.0",
-    "@angular/compiler": "^4.3.0",
-    "@angular/compiler-cli": "^4.3.0",
-    "@angular/core": "^4.3.0",
-    "@angular/forms": "^4.3.0",
-    "@angular/http": "^4.3.0",
-    "@angular/platform-browser": "^4.3.0",
-    "@angular/platform-browser-dynamic": "^4.3.0",
-    "@angular/platform-server": "^4.3.0",
-    "@angular/router": "^4.3.0",
-    "@nguniversal/aspnetcore-engine": "^1.0.0-beta.2",
-    "@ngx-translate/core": "^6.0.1",
-    "@ngx-translate/http-loader": "0.0.3",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@nguniversal/aspnetcore-engine": "^5.0.0-beta.5",
+    "@nguniversal/common": "^5.0.0-beta.5",
+    "@ngx-translate/core": "^8.0.0",
+    "@ngx-translate/http-loader": "^2.0.0",
     "@types/node": "^7.0.12",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
@@ -49,16 +50,16 @@
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
     "moment": "2.18.1",
-    "ngx-bootstrap": "2.0.0-beta.3",
+    "ngx-bootstrap": "2.0.0-beta.6",
     "node-sass": "^4.5.2",
     "preboot": "^5.0.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "to-string-loader": "^1.1.5",
-    "typescript": "2.5.2",
+    "typescript": "~2.5.0",
     "url-loader": "^0.5.7",
     "webpack": "^3.6.0",
     "webpack-hot-middleware": "^2.19.1",
@@ -66,8 +67,9 @@
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.2",
-    "@ngtools/webpack": "^1.3.0",
+    "@angular/cli": "^1.7.0-beta.1",
+    "@angular/compiler-cli": "^5.2.1",
+    "@ngtools/webpack": "^1.9.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
     "chai": "^3.5.0",
