--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "@nguniversal/aspnetcore-engine": "^5.0.0-beta.5",
-    "@nguniversal/common": "^5.0.0-beta.5",
+    "@nguniversal/aspnetcore-engine": "5.0.0-beta.5",
+    "@nguniversal/common": "5.0.0-beta.5",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "@types/node": "^7.0.12",
