--- a/package.json
+++ b/package.json
@@ -28,65 +28,66 @@
     "@angular/router": "^5.0.0",
     "@nguniversal/aspnetcore-engine": "^5.0.0-beta.8",
     "@nguniversal/common": "^5.0.0-beta.8",
-    "@ngx-translate/core": "^8.0.0",
-    "@ngx-translate/http-loader": "^2.0.0",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
     "@types/node": "^7.0.12",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
-    "aspnet-webpack": "^2.0.1",
-    "awesome-typescript-loader": "^3.0.0",
-    "bootstrap": "^3.3.7",
+    "aspnet-webpack": "^2.0.3",
+    "awesome-typescript-loader": "^3.2.3",
+    "bootstrap": "^4.1.1",
     "bootstrap-sass": "^3.3.7",
-    "core-js": "^2.5.1",
-    "css": "^2.2.1",
-    "css-loader": "^0.28.7",
-    "event-source-polyfill": "^0.0.9",
-    "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.5.1",
+    "core-js": "^2.5.6",
+    "css": "^2.2.3",
+    "css-loader": "^0.28.11",
+    "event-source-polyfill": "^0.0.12",
+    "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.1",
-    "json-loader": "^0.5.4",
+    "jquery": "^3.3.1",
+    "json-loader": "^0.5.7",
     "moment": "2.18.1",
-    "ngx-bootstrap": "2.0.0-beta.6",
-    "node-sass": "^4.5.2",
+    "ngx-bootstrap": "2.0.5",
+    "node-sass": "^4.9.0",
     "preboot": "^5.0.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "to-string-loader": "^1.1.5",
-    "typescript": "~2.5.0",
-    "url-loader": "^0.5.7",
+    "typescript": "~2.7.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.6.0",
-    "webpack-hot-middleware": "^2.19.1",
+    "webpack-hot-middleware": "^2.22.1",
     "webpack-merge": "^4.1.0",
-    "zone.js": "^0.8.17"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.0-beta.1",
     "@angular/compiler-cli": "^5.2.1",
     "@ngtools/webpack": "^1.9.0",
-    "@types/chai": "^3.4.34",
-    "@types/jasmine": "^2.5.37",
-    "chai": "^3.5.0",
-    "codelyzer": "^3.0.0",
-    "istanbul-instrumenter-loader": "^3.0.0",
+    "@types/chai": "^4.1.3",
+    "@types/jasmine": "^2.8.7",
+    "chai": "^4.1.2",
+    "codelyzer": "^3.1.2",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.4",
+    "karma-jasmine": "^1.1.2",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-remap-coverage": "^0.1.4",
+    "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
-    "tslint": "^5.7.0",
-    "webpack-bundle-analyzer": "^2.9.0"
+    "karma-webpack": "^2.0.4",
+    "tslint": "^5.10.0",
+    "webpack-bundle-analyzer": "^2.12.0"
   }
 }
