--- a/package.json
+++ b/package.json
@@ -8,75 +8,75 @@
     "test:ci": "npm run test -- --browsers PhantomJS_custom",
     "test:ci:watch": "npm run test:ci -- --auto-watch --no-single-run",
     "test:coverage": "npm run test -- --coverage",
-    "build:dev": "npm run build:vendor && npm run build:webpack",
+    "build:dev": "npm run build:vendor && npm run build:webpack -- --verbose",
     "build:webpack": "webpack --progress --color",
     "build:prod": "npm run clean && npm run build:vendor -- --env.prod && npm run build:webpack -- --env.prod",
-    "build:p": "npm run build:webpack -- --env.prod",
+    "build:p": "npm run build:webpack -- mode production --env.prod",
     "build:vendor": "webpack --config webpack.config.vendor.js --progress --color",
     "clean": "rimraf wwwroot/dist clientapp/dist"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/platform-server": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@nguniversal/aspnetcore-engine": "^5.0.0-beta.8",
-    "@nguniversal/common": "^5.0.0-beta.8",
-    "@ngx-translate/core": "^8.0.0",
-    "@ngx-translate/http-loader": "^2.0.0",
-    "@types/node": "^7.0.12",
+    "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-server": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "@nguniversal/aspnetcore-engine": "^6.0.0",
+    "@nguniversal/common": "^6.0.0",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
+    "@types/node": "^10.1.2",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
-    "awesome-typescript-loader": "^3.0.0",
-    "bootstrap": "^3.3.7",
-    "bootstrap-sass": "^3.3.7",
-    "core-js": "^2.5.1",
+    "awesome-typescript-loader": "^5.0.0",
+    "bootstrap": "^4.1.1",
+    "core-js": "^2.5.7",
     "css": "^2.2.1",
     "css-loader": "^0.28.7",
-    "event-source-polyfill": "^0.0.9",
+    "event-source-polyfill": "0.0.12",
     "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.1",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.1",
+    "jquery": "^3.3.1",
     "json-loader": "^0.5.4",
-    "moment": "2.18.1",
-    "ngx-bootstrap": "2.0.0-beta.6",
+    "moment": "^2.22.1",
+    "ngx-bootstrap": "^3.0.0",
     "node-sass": "^4.5.2",
-    "preboot": "^5.0.0",
+    "preboot": "^6.0.0-beta.4",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "rxjs": "^5.5.6",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
+    "rxjs": "^6.2.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "to-string-loader": "^1.1.5",
-    "typescript": "~2.5.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^3.6.0",
-    "webpack-hot-middleware": "^2.19.1",
+    "typescript": "^2.7.2",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.0",
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.0-beta.1",
-    "@angular/compiler-cli": "^5.2.1",
-    "@ngtools/webpack": "^1.9.0",
-    "@types/chai": "^3.4.34",
+    "@angular/cli": "^6.0.5",
+    "@angular/compiler-cli": "^6.0.3",
+    "@ngtools/webpack": "^6.0.5",
+    "@types/chai": "^4.1.3",
     "@types/jasmine": "^2.5.37",
-    "chai": "^3.5.0",
-    "codelyzer": "^3.0.0",
+    "chai": "^4.1.2",
+    "codelyzer": "^4.3.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.7.1",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.2",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
@@ -85,8 +85,9 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
+    "karma-webpack": "^3.0.0",
     "tslint": "^5.7.0",
-    "webpack-bundle-analyzer": "^2.9.0"
+    "webpack-bundle-analyzer": "^2.13.1",
+    "@angular-devkit/build-angular": "~0.6.5"
   }
 }
