--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "tslint": "^5.10.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "^2.1.4",
+    "@angular-devkit/build-angular": "~0.6.5"
   }
 }
