--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "angular4-aspnetcore-universal",
   "version": "1.0.0-rc3",
   "scripts": {
+    "clean:build": "npm run clean && npm run build:dev",
     "clean:install": "npm run clean && rimraf ./node_modules ./bin ./obj ./package-lock.json && dotnet restore && npm i",
+    "clean:all": "npm run clean && rimraf ./node_modules ./bin ./obj ./package-lock.json",
+    "clean": "rimraf wwwroot/dist clientapp/dist",
     "lint": "tslint -p tsconfig.json",
     "test": "npm run build:vendor && karma start ClientApp/test/karma.conf.js",
     "test:watch": "npm run test -- --auto-watch --no-single-run",
@@ -13,8 +16,7 @@
     "build:webpack": "webpack --progress --color",
     "build:prod": "npm run clean && npm run build:vendor -- --env.prod && npm run build:webpack -- --env.prod",
     "build:p": "npm run build:webpack -- --env.prod",
-    "build:vendor": "webpack --config webpack.config.vendor.js --progress --color",
-    "clean": "rimraf wwwroot/dist clientapp/dist"
+    "build:vendor": "webpack --config webpack.config.vendor.js --progress --color"
   },
   "dependencies": {
     "@angular/animations": "^6.0.3",
@@ -31,14 +33,14 @@
     "@nguniversal/common": "^6.0.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "@types/node": "^10.1.2",
+    "@types/node": "^10.3.0",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
-    "aspnet-webpack": "^2.0.3",
+    "aspnet-webpack": "^3.0.0",
     "awesome-typescript-loader": "^5.0.0",
     "bootstrap": "^4.1.1",
-    "core-js": "^2.5.6",
+    "core-js": "^2.5.7",
     "css": "^2.2.3",
     "css-loader": "^0.28.11",
     "event-source-polyfill": "^0.0.12",
@@ -61,19 +63,19 @@
     "to-string-loader": "^1.1.5",
     "typescript": "~2.7.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.9.1",
+    "webpack": "^4.10.2",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.5",
+    "@angular/cli": "^6.0.7",
     "@angular/compiler-cli": "6.0.3",
-    "@ngtools/webpack": "^6.0.5",
+    "@ngtools/webpack": "^6.1.0-beta.1",
     "@types/chai": "^4.1.3",
     "@types/jasmine": "^2.8.7",
     "chai": "^4.1.2",
-    "codelyzer": "^3.1.2",
+    "codelyzer": "^4.3.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^2.5.2",
@@ -90,7 +92,7 @@
     "tslint": "^5.10.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.4",
-    "@angular-devkit/build-angular": "~0.6.6"
+    "webpack-cli": "^3.0.1",
+    "@angular-devkit/build-angular": "~0.7.0-beta.1"
   }
 }
