--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.6",
     "@angular/cli": "^6.0.5",
     "@angular/compiler-cli": "6.0.3",
     "@ngtools/webpack": "^6.0.5",
@@ -88,10 +89,10 @@
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.4",
+    "mini-css-extract-plugin": "^0.4.0",
     "tslint": "^5.10.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.4",
-    "@angular-devkit/build-angular": "~0.6.6"
+    "webpack-cli": "^2.1.4"
   }
 }
