--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.2.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "to-string-loader": "^1.1.5",
@@ -75,7 +74,6 @@
     "@types/jasmine": "^2.8.7",
     "chai": "^4.1.2",
     "codelyzer": "^3.1.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.7.1",
@@ -88,6 +86,7 @@
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.4",
+    "mini-css-extract-plugin": "0.4.0",
     "tslint": "^5.10.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-bundle-analyzer": "^2.13.1",
