--- a/Asp2017.csproj
+++ b/Asp2017.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- New Meta Package has SpaServices in It -->
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="0.1.1646902" />
     <PackageReference Include="NETStandard.Library" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
