update for formating, code style, ng fix, etc

--- a/ClientApp/tsconfig.app.json
+++ b/ClientApp/tsconfig.app.json
@@ -6,9 +6,5 @@
     "baseUrl": "",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts",
-    "boot.server.PRODUCTION.ts"
-  ]
+  "exclude": ["test.ts", "**/*.spec.ts", "boot.server.PRODUCTION.ts"]
 }
