--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@types/node": "^10.1.2",
-    "angular2-router-loader": "^0.3.5",
+    "angular-router-loader": "^0.8.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.3",
