fix(build): fix major build and run-time errors
closes #680

--- a/ClientApp/tsconfig.app.json
+++ b/ClientApp/tsconfig.app.json
@@ -6,5 +6,9 @@
     "baseUrl": "",
     "types": []
   },
-  "exclude": ["test.ts", "**/*.spec.ts", "boot.server.PRODUCTION.ts"]
+  "exclude": [
+    "test.ts", 
+    "**/*.spec.ts",
+    "boot.server.PRODUCTION.ts"
+  ]
 }
