--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/platform-server": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@nguniversal/aspnetcore-engine": "^6.0.0",
-    "@nguniversal/common": "^6.0.0",
+    "@nguniversal/aspnetcore-engine": "^7.0.2",
+    "@nguniversal/common": "^7.0.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@types/node": "^10.1.2",
@@ -57,7 +57,7 @@
     "ngx-bootstrap": "^3.0.0",
     "node-sass": "^4.9.0",
     "npm": "^6.1.0",
-    "preboot": "^6.0.0-beta.4",
+    "preboot": "6.0.0-beta.4",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.0",
