feat(update client): update client dependencies
This commit:
- updates Angular from 6.* to most recent 7.2 version
- updates all related client and tooling dependencies
- removes dependencies that are no longer user (like Chai related ones)

Thanks!

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular6-aspnetcore-universal",
+  "name": "angular7-aspnetcore-universal",
   "author": {
     "name": "Mark Pieszak",
     "email": "hello@devhelp.online",
@@ -22,81 +22,78 @@
     "clean": "rimraf wwwroot/dist clientapp/dist"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/platform-server": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^7.2.0",
+    "@angular/common": "^7.2.0",
+    "@angular/compiler": "^7.2.0",
+    "@angular/core": "^7.2.0",
+    "@angular/forms": "^7.2.0",
+    "@angular/http": "^7.2.0",
+    "@angular/platform-browser": "^7.2.0",
+    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/platform-server": "^7.2.0",
+    "@angular/router": "^7.2.0",
     "@nguniversal/aspnetcore-engine": "^7.0.2",
     "@nguniversal/common": "^7.0.2",
-    "@ngx-translate/core": "^10.0.2",
-    "@ngx-translate/http-loader": "^3.0.1",
-    "@types/node": "^10.1.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@types/node": "^10.12.18",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
-    "aspnet-webpack": "^2.0.3",
-    "awesome-typescript-loader": "^5.0.0",
-    "bootstrap": "^4.1.1",
-    "core-js": "^2.5.6",
-    "css": "^2.2.3",
-    "css-loader": "^0.28.11",
-    "event-source-polyfill": "^0.0.12",
+    "aspnet-webpack": "^3.0.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "bootstrap": "^4.2.1",
+    "core-js": "^2.6.1",
+    "css": "^2.2.4",
+    "css-loader": "^2.1.0",
+    "event-source-polyfill": "^1.0.5",
     "expose-loader": "^0.7.5",
-    "file-loader": "^1.1.11",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
-    "moment": "2.22.1",
-    "ngx-bootstrap": "^3.0.0",
+    "moment": "^2.23.0",
+    "ngx-bootstrap": "^3.1.4",
     "node-sass": "^4.9.0",
-    "npm": "^6.1.0",
-    "preboot": "6.0.0-beta.4",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.2.0",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
+    "preboot": "^6.0.0-beta.6",
+    "raw-loader": "^1.0.0",
+    "rimraf": "^2.6.3",
+    "rxjs": "^6.3.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
-    "typescript": "~2.7.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.9.1",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.2",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.28.1",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.6",
-    "@angular/cli": "^6.0.5",
-    "@angular/compiler-cli": "6.0.3",
-    "@ngtools/webpack": "^6.0.5",
-    "@types/chai": "^4.1.3",
-    "@types/jasmine": "^2.8.7",
-    "chai": "^4.1.2",
-    "codelyzer": "^3.1.2",
+    "@angular/cli": "^7.2.0",
+    "@angular/compiler-cli": "^7.2.0",
+    "@ngtools/webpack": "^7.1.4",
+    "@types/jasmine": "^3.3.5",
+    "codelyzer": "^4.5.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.7.1",
-    "karma-chai": "^0.1.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.2",
+    "karma-coverage": "^1.1.2",
+    "karma-jasmine": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
-    "mini-css-extract-plugin": "^0.4.0",
-    "tslint": "^5.10.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.1.2"
+    "karma-webpack": "^3.0.5",
+    "mini-css-extract-plugin": "^0.5.0",
+    "tslint": "^5.12.0",
+    "typescript": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.2.1"
   },
   "license": "MIT",
   "repository": {
