--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "karma-webpack": "^2.0.4",
     "mini-css-extract-plugin": "^0.4.0",
     "tslint": "^5.10.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "terser-webpack-plugin": "^1.2.1",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.2"
   },
