--- a/wwwroot/manifest.json
+++ b/wwwroot/manifest.json
@@ -5,12 +5,41 @@
     "ASP.NET Core 2.1 & Angular 6(+) Advanced Starter - with Server-side prerendering (for Angular SEO)!",
   "icons": [
     {
+      "src": "/images/icon36x36.png",
+      "sizes": "36x36",
+      "type": "image/png"
+    }, {
+      "src": "/images/icon48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    }, {
+      "src": "/images/icon72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    }, {
+      "src": "/images/icon96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    }, {
+      "src": "/images/icon144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }, {
       "src": "/images/icon192x192.png",
-      "sizes": "192x192"
-    },
-    {
+      "sizes": "192x192",
+      "type": "image/png"
+    }, {
+      "src": "/images/icon256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    }, {
+      "src": "/images/icon384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    }, {
       "src": "/images/icon512x512.png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "background_color": "#3E4EB8",
