--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "mini-css-extract-plugin": "^0.5.0",
+    "terser-webpack-plugin": "^1.2.1",
     "tslint": "^5.12.0",
     "typescript": "^3.1.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
