--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
     "clean": "rimraf wwwroot/dist clientapp/dist"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.0",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "^7.2.0",
-    "@angular/http": "^7.2.0",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/platform-server": "^7.2.0",
-    "@angular/router": "^7.2.0",
-    "@nguniversal/aspnetcore-engine": "^7.0.2",
-    "@nguniversal/common": "^7.0.2",
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/http": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/platform-server": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "@nguniversal/aspnetcore-engine": "^7.1.0",
+    "@nguniversal/common": "^7.1.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@types/node": "^10.12.18",
+    "@types/node": "^11.9.5",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^3.0.0",
     "awesome-typescript-loader": "^5.2.1",
-    "bootstrap": "^4.2.1",
-    "core-js": "^2.6.1",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.6.5",
     "css": "^2.2.4",
     "css-loader": "^2.1.0",
     "event-source-polyfill": "^1.0.5",
@@ -53,48 +53,48 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
-    "moment": "^2.23.0",
-    "ngx-bootstrap": "^3.1.4",
-    "node-sass": "^4.9.0",
-    "preboot": "^6.0.0-beta.4",
+    "moment": "^2.24.0",
+    "ngx-bootstrap": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "preboot": "^7.0.0",
     "raw-loader": "^1.0.0",
     "rimraf": "^2.6.3",
-    "rxjs": "^6.3.3",
+    "rxjs": "~6.4.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
     "url-loader": "^1.1.2",
-    "webpack": "^4.28.1",
+    "webpack": "^4.29.5",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.2.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.6",
-    "@angular/cli": "^7.2.0",
-    "@angular/compiler-cli": "^7.2.0",
-    "@ngtools/webpack": "^7.1.4",
-    "@types/jasmine": "^3.3.5",
-    "codelyzer": "^4.5.0",
+    "@angular-devkit/build-angular": "~0.13.3",
+    "@angular/cli": "~7.3.3",
+    "@angular/compiler-cli": "~7.2.0",
+    "@ngtools/webpack": "~7.3.3",
+    "@types/jasmine": "~2.8.8",
+    "codelyzer": "~4.5.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.1.4",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-jasmine": "^2.0.1",
+    "karma": "~4.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage": "~1.1.2",
+    "karma-jasmine": "~2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "mini-css-extract-plugin": "^0.5.0",
-    "terser-webpack-plugin": "^1.2.1",
-    "tslint": "^5.12.0",
-    "typescript": "^3.1.3",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.2.1"
+    "terser-webpack-plugin": "^1.2.3",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack-bundle-analyzer": "^3.0.4",
+    "webpack-cli": "^3.2.3"
   },
   "license": "MIT",
   "repository": {
