--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "preboot": "^7.0.0",
     "raw-loader": "^1.0.0",
     "rimraf": "^2.6.3",
-    "rxjs": "~6.4.0",
+    "rxjs": "6.2.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
